# clerk-cli

./: .env.example  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yaml  release-please.yaml  release-raycast.yaml  release.yaml
.sisyphus/: boulder.json
.sisyphus/notepads/raycast-extension/: decisions.md  learnings.md
.sisyphus/plans/: orgs-id-only-flag.md  raycast-extension.md
.trunk/: trunk.yaml
extensions/raycast/: HOMEBREW_SETUP.md  ICON_REQUIREMENTS.md  QUICK_START.md  README.md  icon.png.txt  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
extensions/raycast/Casks/: clerk-raycast.rb
extensions/raycast/extensions/raycast/: CHANGELOG.md
extensions/raycast/scripts/: install.sh  package.sh
extensions/raycast/src/: generate-jwt.tsx  impersonate-user.tsx  org-members.tsx  search-organizations.tsx  search-users.tsx  switch-instance.tsx
extensions/raycast/src/api/: clerk.ts  instances.ts
extensions/raycast/src/hooks/: useInstance.ts
src/: client.rs  main.rs  models.rs
src/commands/: completions.rs  impersonate.rs  jwt.rs  mod.rs  orgs.rs  users.rs
src/completions/: clerk.zsh
tests/: cli_test.rs  e2e_test.rs  fuzzy_test.rs  integration_test.rs
tests/common/: mod.rs
