[package]
name = "clerk-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "clerk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
dialoguer = "0.11"
dotenvy = "0.15"
fuzzy-matcher = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
